１次元・２次元コード作成サービス作成

--- a/src/main/webapp/WEB-INF/views/echo/hello.html
+++ b/src/main/webapp/WEB-INF/views/echo/hello.html
@@ -4,6 +4,12 @@
 <title>Echo Application</title>
 </head>
 <body>
-  <p th:text="|Hello ${name}|"></p>
+  <p th:text="|Target Url: ${url}|"></p>
+  <P>
+    <img th:src="|data:image/png;base64, ${qrCode}|">
+  </P>
+  <p>
+    <img th:src="|data:image/png;base64, ${barcode}|">
+  </p>
 </body>
 </html>
